--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:padding="10dp"
         android:orientation="horizontal">
-        <com.magicrecipe.CircleImageView
+        <com.magicrecipe.Helper.CircleImageView
             android:id="@+id/itemimage"
             android:layout_width="80dp"
             android:layout_height="80dp"
